Edited wiki page through web user interface.

--- a/wiki/iDJFeatures.wiki
+++ b/wiki/iDJFeatures.wiki
@@ -3,4 +3,15 @@
 
 = iDJ Features =
 
-  * Cross-fader.
+Core features:
+  * Loading and playing of MP3 songs.
+  * Cross-fader to mix between songs.
+  * Forward/reverse (in-song navigation) by rotating the discs.
+  * Pitch control with slider control.
+  * Pitch control by touching the discs ().
+  * Scratching effect.
+  * Volume control (two channels).
+
+Extra features (P2):
+  * Equalizer.
+  * "English Spin"
