Edited wiki page through web user interface.

--- a/wiki/iDJUsersGuide.wiki
+++ b/wiki/iDJUsersGuide.wiki
@@ -27,12 +27,22 @@ You navigate a song by rotating the records.
   * Drag the finger counter-clockwise to move back in the song.
   * Release the deck to let it resume playing.
 
-== Pitch control ==
+== Pitch/speed control ==
 
-=== with slider control. ===
+You can change the pitch/speed either by touching the discs, or with the slider control for more precise changes.
 
-=== by touching the discs ===
-(still finger means slow down/stop)
+=== Temporary speed change by touching the discs ===
+
+  * Place a finger on one of the spinning discs to slow it down to a halt.
+  * Move the finger on the disc clockwise to play the song. The quicker you move the finger around, the higher pitch.
+  * Let go of the finger to let the disc resume its original speed.
+
+=== Permanent speed change with slider controls ===
+
+  * The pitch controls are located in the middle of each of the discs.
+  * Press the finger against a pitch control, and it will grow larger for more precise adjustments.
+  * Move the slider upwards for higher speed/pitch. Move the slider downwards for lower speed/pitch.
+  * Let go of the control, and it will shrink to its original size. The speed will remain at the level you set it.
 
 === "English Spin" ===
 
