Edited wiki page through web user interface.

--- a/wiki/iDJUsersGuide.wiki
+++ b/wiki/iDJUsersGuide.wiki
@@ -5,27 +5,31 @@
 
 This page is intended as instructions both to users (how to use) and developers (how to implement).
 
+
 == Loading and playing of MP3 songs ==
 
   * Double-tap the disc to open your iPod directory list.
   * Click the song.
   * The song is loaded, and you return to the main view.
 
-== Cross-fader == 
+== Cross-fader ==
+
 The Cross-fader is used to mix between songs.
 
   * The cross-fader is the big slider control in the bottom of the screen.
-  * Pull the slider to the far left to only hear Deck 1, pull it to the far right to only hear Deck 2.
-  * When the slider is in the middle, both Deck 1 and 2 are played with equal volume.
+  * Pull the slider to the far left to only hear Disc 1, pull it to the far right to only hear Disc 2.
+  * When the slider is in the middle, both Disc 1 and 2 are played with equal volume.
 
 
 == Forward/reverse (in-song navigation) ==
+
 You navigate a song by rotating the records.
 
-  * Press a finger on one of the decks.
+  * Press a finger on one of the discs.
   * Drag the finger clockwise to move forward in the song.
   * Drag the finger counter-clockwise to move back in the song.
-  * Release the deck to let it resume playing.
+  * Release the disc to let it resume playing.
+
 
 == Pitch/speed control ==
 
@@ -46,9 +50,27 @@ You can change the pitch/speed either by touching the discs, or with the slider 
 
 === "English Spin" ===
 
+  * Put down two fingers near the center of the disc, and rotate.
+  * The disc will quickly gain speed.
+  * After a while, the disc will revert back to its original speed.
+
 == Scratching ==
 
+  * Put down a finger on a disc, and move it back/forth (clockwise/counter-clockwise).
+  * The song will be played quickly reverse/forward, emitting a scratching sound.
+
 == Volume control ==
-(two channels)
+
+Each deck/disc plays in a separate channels with its own volume control. In addition to that, the iPhone volume control (side buttons) serves as the master volume control for both channels.
+
+Changing volume on one of the channels:
+  * The channel volume slider is located above the corresponding disc.
+  * Move the slider to the right to increase the volume, move it to the left to decrease (and eventually mute completely) the volume.
 
 == Equalizer ==
+
+Coming in later versions.
+
+== Effects ==
+
+Coming in later versions.
