Edited wiki page through web user interface.

--- a/wiki/IntroductionToDJing.wiki
+++ b/wiki/IntroductionToDJing.wiki
@@ -17,3 +17,7 @@ Collection of YouTube links: http://www.electric-circus.net/forum/about4676.html
 Mixing guide: http://www.youtube.com/watch?v=KuTdMFj5l4I
 
 Pitch bend: http://www.youtube.com/watch?v=XD4qcGob65I
+
+===DJ Apps===
+
+http://jklabs.net/projects/visualscratch/description.html
